Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextObjIntObjField.quorum
class Main
    Text v
    action Main
        v:SetValue(Test())
    end

    action Test() returns Text
        Integer var
        var:SetValue(5)
        return var
    end
end